# nutcracker

./: .gitignore  README.md
apps/: build_and_run.sh
cacao/: Makefile
filbert/: Makefile  main.c  printk.c
include/: init.h
utils/p4-nutcracker/: CMakeLists.txt  main.cpp  run.sh
utils/p4-nutcracker/ADT/: APInt.cpp  APInt.h  APSInt.h
utils/p4-nutcracker/AST/: APNumericStorage.h  ASTContext.cpp  ASTContext.h  Attr.cpp  Attr.h  Decl.cpp  Decl.h  DeclBase.cpp  DeclBase.h  DeclGroup.cpp  DeclGroup.h  DeclarationName.h  Expr.cpp  Expr.h  OperationKinds.h  Stmt.cpp  Stmt.h  Type.cpp  Type.h  TypeTraits.h
utils/p4-nutcracker/Basic/: IdentifierTable.h  Specifiers.h
utils/p4-nutcracker/C_CODE/: egress.bc  egress.c  egress.h  egress.json  ingress.bc  ingress.c  ingress.h
utils/p4-nutcracker/CallGraph/: CallGraph.cpp  Expression.h  Parameter.h  Primitive.h
utils/p4-nutcracker/FLOW_MONITOR/: Makefile  ingress-cp.c  ingress.bc  ingress.c  ingress.h  ingress.json
utils/p4-nutcracker/FLOW_MONITOR_C/: Makefile  ingress.bc  ingress.c  ingress.json
utils/p4-nutcracker/THIS_IS_CORRECT_DOCA/: Makefile  egress.c  ingress.c  ingress.json
utils/p4-nutcracker/backends/: codeGen.h  target.h
utils/p4-nutcracker/backends/c/: cBackend.cpp  cBackend.h  cOptions.h  cProgram.cpp  cProgram.h  cTarget.cpp
utils/p4-nutcracker/backends/doca/: docaBackend.cpp  docaBackend.h  docaOptions.h  docaProgram.cpp  docaProgram.h  docaTarget.cpp
utils/p4-nutcracker/input/: simple_fwd_v1switch.json  test-p4.json  vxlan.json
utils/p4-nutcracker/util/: options.h  sourceCodeBuilder.h
(+479 files in other folders)
